--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <li class="nav-item"><a class="nav-link text-white" href="#philosophie" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Philosophie</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="#products" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Unsere Produkte</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="#contact" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Kontakt & Anfahrt</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#gutscheine" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Gutscheine</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="RICAProducts.html" style="font-size: 1.32rem; padding: 0.7rem 1rem;">RICA</a></li>
                 </ul>
             </div>
@@ -89,6 +90,52 @@
                 <i class="bi bi-calendar-check me-2"></i>Jetzt Termin vereinbaren
             </a>
 
+        </div>
+    </section>
+
+    <!-- Weihnachts-Gutschein Section -->
+    <section id="gutscheine" class="py-5" style="background: url('Images/Voucher/xmas4.jpg') center/cover no-repeat; position: relative; overflow: hidden;">
+        <!-- Weihnachtliche Dekoration im Hintergrund -->
+        <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; opacity: 0.3; background: linear-gradient(180deg, transparent 0%, rgba(0,0,0,0.2) 50%, transparent 100%); pointer-events: none;"></div>
+
+        <div class="container position-relative" style="z-index: 1;">
+            <div class="row justify-content-center">
+                <div class="col-md-8 col-lg-6">
+                    <div class="card shadow-lg" style="border-radius: 20px; border: 3px solid #89876c; background: rgba(255,255,255,0.98);">
+                        <div class="card-body text-center p-4 p-md-5">
+                            <!-- Weihnachtliche Icons -->
+                            <div class="mb-3" style="font-size: 2rem; color: #8B0000;">
+                                <i class="bi bi-gift-fill me-2"></i>
+                                <i class="bi bi-stars" style="color: #FFD700;"></i>
+                                <i class="bi bi-gift-fill ms-2"></i>
+                            </div>
+
+                            <h3 class="mb-3" style="color: #89876c;">
+                                Noch kein Weihnachtsgeschenk?
+                            </h3>
+
+                            <p class="lead mb-4" style="color: #333; font-size: 1.2rem;">
+                                Verschenken Sie Schönheit und Wohlbefinden!
+                            </p>
+
+                            <div class="mb-4">
+                                <img src="Images/Logo_MM.png" alt="MUCKE & MÄHNE" style="max-width: 150px; height: auto;">
+                            </div>
+
+                            <a href="https://www.studiobookr.com/VoucherOrders/mucke-maehne-74669" target="_blank" class="btn btn-outline-primary btn-lg" style="border-color: #8B0000; color: #8B0000; transition: all 0.3s ease;" onmouseover="this.style.backgroundColor='#8B0000'; this.style.color='white';" onmouseout="this.style.backgroundColor='transparent'; this.style.color='#8B0000';">
+                                <i class="bi bi-gift me-2"></i>Hier zum Gutschein
+                            </a>
+
+                            <!-- Schneeflocken Dekoration -->
+                            <div class="mt-4" style="color: #89c9e8; font-size: 1.5rem;">
+                                <i class="bi bi-snow me-3"></i>
+                                <i class="bi bi-snow2 me-3"></i>
+                                <i class="bi bi-snow3"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
