--- a/index.html
+++ b/index.html
@@ -27,6 +27,38 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mobile_fixes.css">
+
+    <style>
+        /* Flyer Responsive Sizing */
+        .flyer-image {
+            display: block;
+            height: auto;
+            margin: 0 auto;
+        }
+
+        /* Smartphone: bis 575px */
+        @media (max-width: 575px) {
+            .flyer-image {
+                width: 95% !important;
+            }
+        }
+
+        /* Tablet Portrait: 576px bis 991px */
+        @media (min-width: 576px) and (max-width: 991px) {
+            .flyer-image {
+                width: 95% !important;
+                max-width: none !important;
+                position: relative;
+            }
+        }
+
+        /* Desktop: ab 992px */
+        @media (min-width: 992px) {
+            .flyer-image {
+                width: 31% !important;
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation -->
@@ -55,27 +87,12 @@
         </div>
     </nav>
 
-    <!-- Job Banner with Scrolling Text -->
-    <div class="job-banner" style="background: linear-gradient(45deg, #a70c0c, #a70c0c, #a70c0c, #a70c0c, #a70c0c); padding: 10px 0; overflow: hidden; position: relative; border-bottom: 3px solid #fff; z-index: 1000; cursor: pointer;" onclick="document.getElementById('team').scrollIntoView({behavior: 'smooth'}); setTimeout(() => openTeamModal('jobposting'), 800);">
-    <div class="scrolling-text" style="white-space: nowrap; animation: scroll-left 32s linear infinite; color: white; font-weight: bold; font-size: 1.1rem; text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">
-            <span style="margin-right: 100px;">WIR STELLEN EIN - FRISEUR/FRISEURIN GESUCHT!</span>
-            <span style="margin-right: 100px;">BEWIRB DICH JETZT!</span>
-            <span style="margin-right: 100px;">Eröffnung Januar 2026</span>
-            <span style="margin-right: 100px;">WIR STELLEN EIN - FRISEUR/FRISEURIN GESUCHT!</span>
-            <span style="margin-right: 100px;">BEWIRB DICH JETZT!</span>
-            <span style="margin-right: 100px;">Eröffnung Januar 2026</span>
-            <span style="margin-right: 100px;">WIR STELLEN EIN - FRISEUR/FRISEURIN GESUCHT!</span>
-            <span style="margin-right: 100px;">BEWIRB DICH JETZT!</span>
-            <span style="margin-right: 100px;">Eröffnung Januar 2026</span>
-            <span style="margin-right: 100px;">WIR STELLEN EIN - FRISEUR/FRISEURIN GESUCHT!</span>
-            <span style="margin-right: 100px;">BEWIRB DICH JETZT!</span>
-            <span style="margin-right: 100px;">Eröffnung Januar 2026</span>
+    <!-- Flyer Section -->
+    <section class="py-0" style="background-color: #f8f9fa; margin-top: 80px; margin-bottom: 120px; overflow: visible; position: relative;">
+        <div style="width: 100vw; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw; overflow: hidden;">
+            <img src="Images/Flyer/MM_Flyer.jpg" alt="MUCKE & MÄHNE Flyer" class="flyer-image">
         </div>
-    </div>
-            <span style="margin-right: 100px;"></span>
-            <span style="margin-right: 100px;"></span>
-        </div>
-    </div>
+    </section>
 
     <!-- Hero Section -->
     <section id="home" class="hero">
@@ -83,10 +100,7 @@
             <h1>Willkommen bei</h1>
             <img src="Images/Logo_MM.png" alt="MUCKE & MÄHNE" class="img-fluid mb-4" style="max-width:60%;">
             <p>Ihr Friseursalon für den perfekten Look</p>
-            <div class="alert alert-info p-4 mb-3 fw-bold text-center" style="background: rgba(255,255,255,0.9); border: 2px solid #a70c0c; border-radius: 15px; font-size: 110%; color: #a70c0c; max-width: 400px; margin: 0 auto 1rem auto;">
-                <i class="bi bi-scissors me-2"></i>Wir eröffnen Januar 2026<i class="bi bi-scissors ms-2"></i>
-            </div>
-            <a href="#contact" class="btn btn-primary" style="background-color: #89876c !important; border-width: 2px; border-color: #89876c!important; padding: 20px 30px; transition: all 0.3s ease;" onmouseover="this.style.backgroundColor='white'; this.style.color='#89876c';" onmouseout="this.style.backgroundColor='#89876c'; this.style.color='white';">
+            <a href="#contact" class="btn btn-primary" style="background-color: #89876c !important; border-width: 2px; border-color: #89876c!important; padding: 20px 30px; margin-top: 6rem; transition: all 0.3s ease;" onmouseover="this.style.backgroundColor='white'; this.style.color='#89876c';" onmouseout="this.style.backgroundColor='#89876c'; this.style.color='white';">
                 <i class="bi bi-calendar-check me-2"></i>Jetzt Termin vereinbaren
             </a>
 
@@ -571,6 +585,7 @@
                     <h3 class="mt-4">Terminvereinbarung</h3>
                     <p>
                         <i class="bi bi-whatsapp"></i> WhatsApp: +49 155 656 44 739<br>
+                        <i class="bi bi-telephone"></i> Telefon: 06128 / 24 69 871<br>
                         <i class="bi bi-envelope"></i> Email: mail@muckeundmaehne.de
                     </p>
                 </div>
