--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <li class="nav-item"><a class="nav-link text-white" href="#philosophie" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Philosophie</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="#products" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Unsere Produkte</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="#contact" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Kontakt & Anfahrt</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#gutscheine" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Gutscheine</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="https://www.studiobookr.com/VoucherOrders/mucke-maehne-74669" style="font-size: 1.32rem; padding: 0.7rem 1rem;">Gutscheine</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="RICAProducts.html" style="font-size: 1.32rem; padding: 0.7rem 1rem;">RICA</a></li>
                 </ul>
             </div>
@@ -104,52 +104,6 @@
                 <i class="bi bi-calendar-check me-2"></i>Jetzt Termin vereinbaren
             </a>
 
-        </div>
-    </section>
-
-    <!-- Weihnachts-Gutschein Section -->
-    <section id="gutscheine" class="py-5" style="background: url('Images/Voucher/xmas4.jpg') center/cover no-repeat; position: relative; overflow: hidden;">
-        <!-- Weihnachtliche Dekoration im Hintergrund -->
-        <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; opacity: 0.3; background: linear-gradient(180deg, transparent 0%, rgba(0,0,0,0.2) 50%, transparent 100%); pointer-events: none;"></div>
-
-        <div class="container position-relative" style="z-index: 1;">
-            <div class="row justify-content-center">
-                <div class="col-md-8 col-lg-6">
-                    <div class="card shadow-lg" style="border-radius: 20px; border: 3px solid #89876c; background: rgba(255,255,255,0.98);">
-                        <div class="card-body text-center p-4 p-md-5">
-                            <!-- Weihnachtliche Icons -->
-                            <div class="mb-3" style="font-size: 2rem; color: #8B0000;">
-                                <i class="bi bi-gift-fill me-2"></i>
-                                <i class="bi bi-stars" style="color: #FFD700;"></i>
-                                <i class="bi bi-gift-fill ms-2"></i>
-                            </div>
-
-                            <h3 class="mb-3" style="color: #89876c;">
-                                Noch kein Weihnachtsgeschenk?
-                            </h3>
-
-                            <p class="lead mb-4" style="color: #333; font-size: 1.2rem;">
-                                Verschenken Sie Schönheit und Wohlbefinden!
-                            </p>
-
-                            <div class="mb-4">
-                                <img src="Images/Logo_MM.png" alt="MUCKE & MÄHNE" style="max-width: 150px; height: auto;">
-                            </div>
-
-                            <a href="https://www.studiobookr.com/VoucherOrders/mucke-maehne-74669" target="_blank" class="btn btn-outline-primary btn-lg" style="border-color: #8B0000; color: #8B0000; transition: all 0.3s ease;" onmouseover="this.style.backgroundColor='#8B0000'; this.style.color='white';" onmouseout="this.style.backgroundColor='transparent'; this.style.color='#8B0000';">
-                                <i class="bi bi-gift me-2"></i>Hier zum Gutschein
-                            </a>
-
-                            <!-- Schneeflocken Dekoration -->
-                            <div class="mt-4" style="color: #89c9e8; font-size: 1.5rem;">
-                                <i class="bi bi-snow me-3"></i>
-                                <i class="bi bi-snow2 me-3"></i>
-                                <i class="bi bi-snow3"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -192,23 +146,21 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="team-member">
-                        <div class="team-photo-container" data-member="jobposting" style="position: relative; cursor: pointer;">
-                            <div class="job-posting-image img-fluid rounded-circle mb-3 team-photo" style="width: 300px; height: 300px; background: linear-gradient(135deg, #6f6e57 0%, #89876c 100%); display: flex; align-items: center; justify-content: center; color: white; font-weight: bold; text-align: center; border: 3px solid #6f6e57; transition: all 0.3s ease; font-size: 1.2rem;">
-                                <div>
-                                    <i class="bi bi-person-plus" style="font-size: 3rem; margin-bottom: 10px; display: block;"></i>
-                                    <div style="font-size: 1.1rem; line-height: 1.2;">WIR SUCHEN<br>DICH!</div>
-                                </div>
+                        <div class="team-photo-container" data-member="sabine" style="position: relative; cursor: pointer;">
+                            <img src="Images/sabine.jpg" alt="Sabine Michel" class="img-fluid rounded-circle mb-3 team-photo" style="width: 300px; height: 300px; object-fit: cover; transition: all 0.3s ease;">
+                            <div class="photo-overlay" style="position: absolute; top: 0; left: 0; width: 300px; height: 300px; border-radius: 50%; background: rgba(111, 110, 87, 0.8); opacity: 0; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; color: white; font-weight: bold;">
+                                <span><i class="bi bi-info-circle me-2"></i>Mehr erfahren</span>
                             </div>
                             <div class="photo-overlay" style="position: absolute; top: 0; left: 0; width: 300px; height: 300px; border-radius: 50%; background: rgba(111, 110, 87, 0.8); opacity: 0; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; color: white; font-weight: bold;">
                                 <span><i class="bi bi-briefcase me-2"></i>Mehr erfahren</span>
                             </div>
                         </div>
-                        <button class="btn btn-sm btn-outline-secondary mb-2 d-md-none team-info-btn" data-member="jobposting" style="border-color: #6f6e57; color: #6f6e57;">
-                            <i class="bi bi-briefcase me-1"></i>Stellenanzeige
+                        <button class="btn btn-sm btn-outline-secondary mb-2 d-md-none team-info-btn" data-member="sabine" style="border-color: #6f6e57; color: #6f6e57;">
+                            <i class="bi bi-info-circle me-1"></i>Mehr Infos
                         </button>
-                        <h3>Werde Teil unseres Teams!</h3>
-                        <p>Leidenschaftliche/r Friseur/in gesucht</p>
-                        <p>Starte deine Karriere bei Mucke & Mähne - wir freuen uns auf dich!</p>
+                        <h3>Sabine Michel</h3>
+                        <p>Leidenschaftliche Friseurgesellin</p>
+                        <p>Expertin für Haarfarben und Typveränderungen</p>
                     </div>
                 </div>
             </div>
@@ -768,18 +720,17 @@
                     "Traditionelle Barbier-Techniken"
                 ]
             },
-            jobposting: {
-                name: "Werde Teil unseres Teams!",
-                title: "Stellenanzeige - Friseur/in (m/w/d)",
-                photo: "", // Kein Bild, da wir ein CSS-Div verwenden
-                experience: "Wir suchen eine/n leidenschaftliche/n Friseur/in (m/w/d) für unser junges, dynamisches Team! Du bringst Kreativität, Teamgeist und Freude am Umgang mit Menschen mit? Dann bist Du bei uns genau richtig! Wir bieten Dir die Möglichkeit, Dich weiterzuentwickeln und Deine Ideen einzubringen.",
-                personal: "Bei Mucke & Mähne erwartet Dich ein familiäres Arbeitsumfeld, faire Bezahlung und die Chance, von Anfang an bei unserem Aufbau dabei zu sein. Wir legen Wert auf Work-Life-Balance und einen respektvollen Umgang miteinander. Bewirb Dich bei uns und werde Teil unserer Vision!",
+            sabine: {
+                name: "Sabine Michel",
+                title: "Friseurgesellin",
+                photo:  "Images/sabine.jpg",
+                experience: "Friseurin aus Leidenschaft – und das schon seit 2008.  Mein Beruf ist für mich mehr als nur Haare schneiden. Ich nehme mir Zeit, höre zu und entwickle gemeinsam mit meinen Kundinnen einen Look, der wirklich zu ihnen passt. Wenn mir am Ende ein Lächeln im Spiegel begegnet, weiß ich, warum ich diesen Beruf so liebe 🤍. Ein besonderer Schwerpunkt meiner Arbeit liegt im Bereich Farbe 🎨 Durch gezielte Weiterbildungen habe ich mich darauf spezialisiert. Ob natürliche Farbnuancen, sanfte Veränderungen oder eine komplette Typveränderung – jede Farbe wird individuell auf den Menschen abgestimmt, der sie trägt. ",
+                personal: "Mir ist wichtig, dass Sie sich bei mir wohlfühlen, ehrlich beraten werden und den Salon mit einem guten Gefühl verlassen – mit Haaren, die zu Ihnen, Ihrem Stil und Ihrem Alltag passen. Ich freue mich darauf, Sie kennenzulernen.",
                 services: [
-                    "Faire Bezahlung",
-                    "Modernes Arbeitsumfeld",
-                    "Flexible Arbeitszeiten",
-                    "Familiäres Team",
-                    "Langfristige Perspektive"
+                    "Damenhaarschnitte & Styling",
+                    "Komplexe Colorationen & Balayage",
+                    "Typberatung",
+                    "RICA Chromoplus Behandlungen"
                 ]
             }
         };
