Korrektur Groß-/Kleinschreibung Sabine.jpg für Linux-Kompatibilität

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="team-member">
                         <div class="team-photo-container" data-member="sabine" style="position: relative; cursor: pointer;">
-                            <img src="Images/sabine.jpg" alt="Sabine Michel" class="img-fluid rounded-circle mb-3 team-photo" style="width: 300px; height: 300px; object-fit: cover; transition: all 0.3s ease;">
+                            <img src="Images/Sabine.jpg" alt="Sabine Michel" class="img-fluid rounded-circle mb-3 team-photo" style="width: 300px; height: 300px; object-fit: cover; transition: all 0.3s ease;">
                             <div class="photo-overlay" style="position: absolute; top: 0; left: 0; width: 300px; height: 300px; border-radius: 50%; background: rgba(111, 110, 87, 0.8); opacity: 0; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; color: white; font-weight: bold;">
                                 <span><i class="bi bi-info-circle me-2"></i>Mehr erfahren</span>
                             </div>
@@ -723,7 +723,7 @@
             sabine: {
                 name: "Sabine Michel",
                 title: "Friseurgesellin",
-                photo:  "Images/sabine.jpg",
+                photo:  "Images/Sabine.jpg",
                 experience: "Friseurin aus Leidenschaft – und das schon seit 2008.  Mein Beruf ist für mich mehr als nur Haare schneiden. Ich nehme mir Zeit, höre zu und entwickle gemeinsam mit meinen Kundinnen einen Look, der wirklich zu ihnen passt. Wenn mir am Ende ein Lächeln im Spiegel begegnet, weiß ich, warum ich diesen Beruf so liebe 🤍. Ein besonderer Schwerpunkt meiner Arbeit liegt im Bereich Farbe 🎨 Durch gezielte Weiterbildungen habe ich mich darauf spezialisiert. Ob natürliche Farbnuancen, sanfte Veränderungen oder eine komplette Typveränderung – jede Farbe wird individuell auf den Menschen abgestimmt, der sie trägt. ",
                 personal: "Mir ist wichtig, dass Sie sich bei mir wohlfühlen, ehrlich beraten werden und den Salon mit einem guten Gefühl verlassen – mit Haaren, die zu Ihnen, Ihrem Stil und Ihrem Alltag passen. Ich freue mich darauf, Sie kennenzulernen.",
                 services: [
